004554 keep preflight tests host compatible
context: hosted validation found a Java 11 file helper in the Java 8 Android test surface and an undeclared native SQLite test.\nchange: read the shared fixture with Java 8 APIs and register the preflight integration test in the Electron ABI policy.\nintent: keep cross-host preflight evidence reproducible in every supported quality lane.